Realign workers upon deleting one. Make sure resources are properly referenced instead of via absolute path. Allow loading extra call targets dynamically via csv files in /calltargets/ folder. Allow using a ../resources/ folder in default mode for extra enums or call targets.